[tool.poetry]
name = "cracking-ciphers"
version = "0.1.0"
description = ""
authors = ["jsadlocha <jr.sadlocha@gmail.com>"]
readme = "README.md"
packages = [{include = "cracking_ciphers"}]

[tool.poetry.dependencies]
python = "^3.8"
pynvim = "^0.4.3"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
